# grouped-list

./: .travis.yml  CHANGELOG.md  README.md  grouped-list.cabal
Data/: GroupedList.hs
bench/: Main.hs
test/: examples.hs  properties.hs
