name:                grouped-list
version:             0.1.0.0
synopsis:            Grouped lists.
description:         ...
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          dhelta.diaz@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010
  exposed-modules: Data.GroupedList
  build-depends:
      base >= 4.8 && < 5
    , containers
    , pointed
    , deepseq
  ghc-options: -O2 -Wall

benchmark grouped-list-bench
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -O2 -Wall
  build-depends: base >= 4.8, grouped-list, criterion
